--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "runopencode/dm-common-helpers-plugin",
-    "description": "dmCommonHelpersPlugin - The collection of common helpers for Diem Extended",
+    "description": "dmCommonHelpersPlugin - The collection of common helpers and libraries for Diem Extended",
     "version" : "0.0.1",
     "time" : "2012-12-09",
     "type": "symfony1-plugin",
